# concordia

./: -o  .gitignore  CMakeLists.txt  INSTALL.md  README.md  SPEC.md  TDD.MD  TODO.md  array_pre_out.json  debug_switch.cnd  example.cnd  go.mod  nob.c  prefix_out.json  repro_crash.cpp  telemetry.cnd  test_bool.cnd  test_bool_output.json
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  bench_common.cpp  bench_common.h  bench_core.cpp  bench_features.cpp  bench_ifelse.cpp  bench_math.cpp  bench_switch.cpp  vm_benchmark.cpp
demos/: CMakeLists.txt  demo_c.c  demo_cpp.cpp  telemetry.cnd
demos/go/: README.md  concordia_impl.c  go.mod  main.go
demos/wasm/: README.md  wasm_bridge.c
docs/: HOST_INTEGRATION.md  LANGUAGE_GUIDE.md  THEORY_POLYNOMIALS.md  THEORY_XTCE_IMPORT.md
editors/concordia-lang/: CHANGELOG.md  README.md  install_dev.ps1  install_dev.sh  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
editors/concordia-lang/src/: completion.ts  definition.ts  diagnostics.ts  extension.ts  formatting.ts  hover.ts  symbols.ts  utils.ts
editors/concordia-lang/syntaxes/: concordia.tmLanguage.json
examples/: CMakeLists.txt  array_pre.cnd  bitpack_test.cnd  complex_input.json  complex_test.cnd  docs_example.cnd  nested.cnd  nested.json  string_bug.cnd  struct_slices.cnd  struct_slices.json  struct_slices_out.json  test.json  unaligned.cnd
examples/basic/: docs_example.cnd  example.cnd
examples/features/arrays/: array_pre.json  prefix.cnd  prefix.json
examples/features/bitpacking/: bitpack_input.json
examples/features/conditionals/: if_else.cnd  if_else.json
examples/features/enums/: enum_example.cnd  enum_example.json  enum_shared.cnd
examples/features/imports/flat/: game_input.json  vector.cnd
examples/features/imports/nested/: main.cnd  main_input.json
examples/features/imports/nested/libs/: math.cnd
examples/features/switch/: advanced_switch_ifelse.cnd  advanced_switch_ifelse.json  decoded.json  switch_example.cnd  switch_input.json
examples/import_test/: main.cnd  my_enum.cnd
examples/imports/: game.cnd  input.json  player.cnd
examples/kitchen_sink/: kitchen_sink  kitchen_sink.c  kitchen_sink.cnd
examples/nested_imports/: input.json
examples/nested_imports/shared/: config.cnd  types.cnd
go/: README.md  bridge.c  concordia.go  consts.go  types_gen.go
include/: cli_helpers.h  compiler.h  concordia.h  nob_concordia.h
src/: vm.c
src/cli/: CMakeLists.txt  cli_helpers.c  cmd_compile.c  cmd_decode.c  cmd_encode.c  cmd_fmt.c  cmd_inspect.c  cmd_lsp.c  json_binding.c  main.c
src/compiler/: CMakeLists.txt  cnd_fmt.c  cnd_internal.h  cnd_lexer.c  cnd_parser.c  cnd_utils.c  cndc.c
src/tools/: CMakeLists.txt  gen_bindings.c  hexview.c  vm_fuzzer.c
src/vm/: CMakeLists.txt  vm_exec.c  vm_internal.h  vm_io.c  vm_verify.c
tests/: CMakeLists.txt  bool_test.cpp  compiler_if_test.cpp  compiler_integration_test.cpp  compiler_test.cpp  compiler_tests.cpp  coverage_test.cpp  enum_sugar_test.cpp  enum_test.cpp  eof_dynamic_test.cpp  extended_coverage_test.cpp  extended_test.cpp  feature_tests.cpp  import_execution_test.cpp  import_test.cpp  language_features_test.cpp  lexer_test.cpp  main_test.cpp  match_rtt_test.cpp  math_expr_test.cpp  name_collision_test.cpp  rtt_if_test.cpp  safety_perf_tests.cpp  self_keyword_test.cpp  spec_coverage_test.cpp  string_array_test.cpp  switch_test.cpp  test_common.cpp  test_common.h  unaligned_benchmark.cpp  unaligned_test.cpp  validation_test.cpp  verifier_tests.cpp  vm_alu_test.cpp  vm_bitfield_test.cpp  vm_concurrency_test.cpp  vm_core_test.cpp  vm_features_test.cpp  vm_opcode_tests.cpp  vm_safety_test.cpp  (+1 more)
